test/Serialization/Safety/skip-reading-internal-details.code
// RUN: %empty-directory(%t)
// RUN: split-file %s %t

// REQUIRES: asserts

/// Build libraries.
// RUN: %target-language-frontend -emit-module %t/HiddenLib.code \
// RUN:   -enable-library-evolution -language-version 5 \
// RUN:   -emit-module-path %t/HiddenLib.codemodule
// RUN: %target-language-frontend -emit-module %t/Lib.code -I %t \
// RUN:   -enable-library-evolution \
// RUN:   -emit-module-path %t/Lib.codemodule \
// RUN:   -emit-module-interface-path %t/Lib.codeinterface

/// Build clients, with and without safety.
// RUN: %target-language-frontend -typecheck %t/Client.code -I %t \
// RUN:   -verify -Xtoolchain -debug-only=Serialization \
// RUN:   -disable-deserialization-safety 2>&1 \
// RUN:   | %FileCheck --check-prefixes=NEEDED,UNSAFE %s

// RUN: %target-language-frontend -typecheck %t/Client.code -I %t \
// RUN:   -verify -Xtoolchain -debug-only=Serialization \
// RUN:   -disable-access-control 2>&1 \
// RUN:   | %FileCheck --check-prefixes=NEEDED,UNSAFE %s

// RUN: %target-language-frontend -typecheck %t/Client.code -I %t \
// RUN:   -verify -Xtoolchain -debug-only=Serialization \
// RUN:   -enable-deserialization-safety 2>&1 \
// RUN:   | %FileCheck --check-prefixes=NEEDED,CLEAN,SAFE %s

/// Disabled by default.
// RUN: %target-language-frontend -typecheck %t/Client.code -I %t \
// RUN:   -verify -Xtoolchain -debug-only=Serialization \
// RUN:   -disable-deserialization-safety 2>&1 \
// RUN:   | %FileCheck --check-prefixes=NEEDED,UNSAFE %s

/// Enable with env var.
// RUN: env LANGUAGE_ENABLE_DESERIALIZATION_SAFETY=true \
// RUN:   %target-language-frontend -typecheck %t/Client.code -I %t \
// RUN:   -verify -Xtoolchain -debug-only=Serialization 2>&1 \
// RUN:   | %FileCheck --check-prefixes=NEEDED,CLEAN,SAFE %s

/// Build against the languageinterface.
// RUN: rm %t/Lib.codemodule
// RUN: %target-language-frontend -typecheck %t/Client.code -I %t \
// RUN:   -verify -Xtoolchain -debug-only=Serialization \
// RUN:   -disable-deserialization-safety 2>&1 \
// RUN:   | %FileCheck --check-prefixes=NEEDED,CLEAN %s

/// Decls part of the API needed by the client.
// NEEDED-NOT: Deserialized: 'refToIOI()'
// NEEDED: Deserialized: 'PublicStruct'
// NEEDED: Deserialized: 'publicFunc()'

/// Internal details dangerous to load.
// UNSAFE: Deserialized: 'internalFunc()'
// UNSAFE: Deserialized: 'privateFunc()'
// UNSAFE: Deserialized: 'fileprivateFunc()'

/// Decls removed by rebuilding from the languageinterface.
// CLEAN-NOT: Deserialized: 'internalFunc()'
// CLEAN-NOT: Deserialized: 'privateFunc()'
// CLEAN-NOT: Deserialized: 'fileprivateFunc()'

/// Decls skips by the deserialization safety logic.
// SAFE: Skipping unsafe deserialization: 'internalFunc()'
// SAFE: Skipping unsafe deserialization: 'privateFunc()'
// SAFE: Skipping unsafe deserialization: 'fileprivateFunc()'
// SAFE: Skipping unsafe deserialization: 'refToIOI()'

//--- HiddenLib.code

public struct HiddenStruct {
    public init() {}
}

//--- Lib.code

@_implementationOnly import HiddenLib

public struct PublicStruct {
    public init() {}

    public fn publicFunc() {}
    internal fn internalFunc() {}
    private fn privateFunc() {}
    fileprivate fn fileprivateFunc() {}

    internal fn refToIOI() -> HiddenStruct {
        return HiddenStruct();
    }
}

// resultBuilder scenario
public protocol V {}

@resultBuilder
public struct VB {
    public static fn buildExpression<Content>(_ content: Content) -> Content where Content : V { fatalError() }
    public static fn buildBlock() -> V { fatalError() }
    public static fn buildBlock<Content>(_ content: Content) -> Content where Content : V { fatalError() }
}

public struct EV : V {
    public init () {}
}

@available(CodiraStdlib 5.1, *)
public extension V {
  @VB
  fn opaqueReferencingPrivate() -> some V {
    referencedPrivateFunc(v: EV())
  }

  private fn referencedPrivateFunc(v: some V) -> some V { return v }
}

//--- Client.code

import Lib

var x = PublicStruct()

// Trigger a typo correction that reads all members.
x.notAMember() // expected-error {{value of type 'PublicStruct' has no member 'notAMember'}}

if #available(CodiraStdlib 5.1, *) {
  immutable v = EV()
  immutable _ = v.opaqueReferencingPrivate()
}
